Fix baseline alignment of text in the toolbars
Close #34

--- a/docroot/css/app.less
+++ b/docroot/css/app.less
@@ -62,7 +62,7 @@ h1 { font-size: 26px }
   z-index: 100;
   border-bottom: 1px solid #000;
   h1 {
-    margin: 0;
+    margin: 5px 0;
   }
 }
 
