--- a/docroot/css/icon-styles.less
+++ b/docroot/css/icon-styles.less
@@ -12,6 +12,10 @@
   font-family: arial;
   &:before {
     margin-right: 5px;
+    display: block;
+    float: left;
+    font-size: 120%;
+    margin-top: 1px;
   }
 }
 
